2001-08-07  Nathan Sidwell  <nathan@codesourcery.com>

	PR c++/3820
	Stop using TYPE_NONCOPIED_PARTS.
	* call.c (build_over_call): Be careful when copy constructing
	or assigning to an empty class.
	* class.c (check_bases_and_members): It has a
	COMPLEX_ASSIGN_REF if it has a vptr.
	(layout_class_type): Don't add empty class padding to
	TYPE_NONCOPIED_PARTS.
	(finish_struct_1): Don't add the VFIELD either.
	* cp-tree.h (TYPE_HAS_TRIVIAL_INIT_REF): Mention _copy_
	initialization.

2001-08-02  Nathan Sidwell  <nathan@codesourcery.com>

	Remove -fhonor-std.
	* NEWS: Document.
	* decl2.c (lang_f_options): Remove honor-std.
	(unsupported_options): Add honor-std.
	* lang-options.h: Remove -fhonor-std, -fno-honor-std.

2001-07-31  Nathan Sidwell  <nathan@codesourcery.com>

	PR c++/3631
	* class.c (update_vtable_entry_for_fn): The fixed adjustment
	of a virtual thunk should be from declaring base.

2001-07-31  Nathan Sidwell  <nathan@codesourcery.com>

	* class.c (dfs_ctor_vtable_bases_queue_p): Always walk into
	the shared virtual base, so preserving inheritance graph order.

2001-07-27  Nathan Sidwell  <nathan@codesourcery.com>

	* class.c (mark_primary_virtual_base): Don't adjust base
	offsets here.
	(dfs_unshared_virtual_bases): Adjust them here.
	(mark_primary_bases): Explain why we adjust at the end.

2001-07-27  Nathan Sidwell  <nathan@codesourcery.com>

	* class.c (finish_struct_1): When copying the primary base's
	VFIELD, make sure we find it is at offset zero.

2001-07-26  Nathan Sidwell  <nathan@codesourcery.com>

	PR c++/3621
	* spew.c (yylex): Only copy the token's lineno, if it is
	non-zero.

2001-07-26  Nathan Sidwell  <nathan@codesourcery.com>

	PR c++/3624
	* call.c (resolve_args): Simplify, call
	convert_from_reference.
	(build_new_op): Resolve and convert from reference ARG1
	earlier. Adjust ARG2 & ARG3 resolve and conversion.

2001-07-26  Nathan Sidwell  <nathan@codesourcery.com>

	PR c++/3152